--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="card">
             <header>
                 <div class="img1">
-                    <img class="img2" src="/JAKEVO/download.png" alt="404">
+                    <img class="img2" src="/download.png" alt="404">
                 </div>
                 <div class="wrap">
                     <div class="text-header">
